scripts/nullness/wpi/url85e313f409_edugasser_Ascensor_tgz-pJ8-ascensor_MainJ8.txt
../original/url85e313f409_edugasser_Ascensor_tgz-pJ8-ascensor_MainJ8/src/ascensor/Main.java:395: error: (dereference.of.nullable) $$ 1 $$ getColaActual().get(piso_actual).frente() $$ ( 14626, 14667 ) $$ dereference of possibly-null reference getColaActual().get(piso_actual).frente()
                total_delayed[traza] += clock - getColaActual().get(piso_actual).frente().getTiempoEntrada();    
                                                                                       ^
../original/url85e313f409_edugasser_Ascensor_tgz-pJ8-ascensor_MainJ8/src/ascensor/Main.java:398: error: (dereference.of.nullable) $$ 1 $$ getColaActual().get(piso_actual).frente() $$ ( 14745, 14786 ) $$ dereference of possibly-null reference getColaActual().get(piso_actual).frente()
            internas[getColaActual().get(piso_actual).frente().getPisoDestino()] = 1;
                                                            ^
../original/url85e313f409_edugasser_Ascensor_tgz-pJ8-ascensor_MainJ8/src/ascensor/Main.java:399: error: (argument) $$ 4 $$ e $$ ArrayList.add $$ @Initialized @Nullable Pasajero $$ @Initialized @NonNull Pasajero $$ ( 14850, 14891 ) $$ incompatible argument for parameter e of ArrayList.add.
            ascensor.getPasajeros().add(getColaActual().get(piso_actual).frente());    
                                                                               ^
  found   : @Initialized @Nullable Pasajero
  required: @Initialized @NonNull Pasajero
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
3 errors
